@@ -1,3 +1,8 @@
+3dt 0.4.0:
+
+- The controls window is positioned better with regard to the viewer.
+- The viewer size is now remembered between program runs.
+
 3dt 0.3.2:
 
 - Added keyboard controlled rotations (left, right, up, down etc.)
